2009-05-08 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-05-04 Vincent
* Drop dependency on erp5_dms_catalog as the scriptable keys it provided are moved into erp5_catalog

2009-04-18 Kazuhiko
* Version 5.4.1

2009-04-10 nicolas
* add update_frequency base category

2009-03-24 fabien
* some method need to be renamed after been moved so change the name everywhere

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-29 yusei
* Classification, Function fields are now translatable.

2008-10-14 yusei
* Added SortIndex property sheet to Image and File.

2008-10-14 yusei
* Start to develop version 5.3.

2008-10-03 yusei
* Fixed a bug which prevent to access to document_module/list.

2008-09-24 yusei
* Update xml format.

2008-09-07 yusei
* Update English messages.

2008-09-04 yusei
* Update English messages.

2008-09-04 yusei
* Fixed workflow title.

2008-09-03 yusei
* Fixed i18n markup in PDF_renderHTMLPreviewNavigation.

2008-07-06 yo
* Add effective date into Web Page.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-12 ivan
* Move Role Definition to erp5_base

2008-06-05 yusei
* Use updateLocalRolesOnSecurityGroups instead of assignRoleToSecurityGroup in local_permission_interaction_workflow/scripts/Parent_updateAllLocalRoles

2008-04-19 yo
* Remove erp5_crm from the dependencies.

2008-4-17 yusei
* Revise version to 5.0.

2008-4-14 yusei
* Remove Document Ingestion Message from event group.

2008-3-17 Yusei
* Remove content_type_registry
(erp5_core will provides generic good set).
Please use the revision 747 or newer of erpt_core.
* Move Contribution Tool portal type to erp5_ingestion.

2008-3-17 Yusei
* Remove portal_contributions (erp5_ingestion will provides it).

2008-3-14 Yusei
* Add dependency to erp5_ingestion.
* Version up to 0.9.3.
* Remove ingestion scripts from DMS.

2008-2-14 Yusei