@@ -14,10 +14,12 @@
             <value>
               <list>
                 <string>title</string>
-                <string>width</string>
-                <string>whitespace_preserve</string>
                 <string>default</string>
+                <string>width</string>
+                <string>height</string>
                 <string>enabled</string>
+                <string>editable</string>
+                <string>whitespace_preserve</string>
               </list>
             </value>
         </item>
@@ -91,12 +93,28 @@
             <value>
               <dictionary>
                 <item>
+                    <key> <string>default</string> </key>
+                    <value> <string></string> </value>
+                </item>
+                <item>
+                    <key> <string>editable</string> </key>
+                    <value> <int>0</int> </value>
+                </item>
+                <item>
+                    <key> <string>enabled</string> </key>
+                    <value> <int>1</int> </value>
+                </item>
+                <item>
                     <key> <string>field_id</string> </key>
-                    <value> <string>my_text_content</string> </value>
+                    <value> <string>my_editor_field</string> </value>
                 </item>
                 <item>
                     <key> <string>form_id</string> </key>
                     <value> <string>Base_viewDMSFieldLibrary</string> </value>
+                </item>
+                <item>
+                    <key> <string>height</string> </key>
+                    <value> <int>18</int> </value>
                 </item>
                 <item>
                     <key> <string>target</string> </key>
